cmake_minimum_required(VERSION 3.15)
project(classifier)

set(CMAKE_CXX_STANDARD 17)
find_package(Boost REQUIRED COMPONENTS filesystem)
find_package (Eigen3 3.3)
include_directories(. ${Boost_INCLUDE_DIRS})
link_directories(${Boost_LIBRARY_DIRS})
find_package(PythonLibs 3.6)
add_executable(classifier src/classifier.cpp src/matplotlib.h src/util.h)
target_include_directories(classifier PRIVATE ${PYTHON_INCLUDE_DIRS})
target_link_libraries(classifier ${PYTHON_LIBRARIES} ${Boost_LIBRARIES} Eigen3::Eigen)
